Exported function to process assay types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ importFrom("flowCore", "read.flowSet")
 importFrom("xcms", "xcmsSet", "sampclass", "sampclass<-", "phenoData")
 export("isatab2bioc")
 export("isatab2bioczip")
+export("processAssayType")
