Added technology_types list, added more elements to be returned by isatab2bioc function, commented out flow cytrometry processing for now, started fixing technology types processing function #3 #5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 importFrom("ArrayExpress", "ae2bioc", "procset", "getcolproc")
-importFrom("affy", "ReadAffy")
-importFrom("flowCore", "read.flowSet")
+#importFrom("affy", "ReadAffy")
+#importFrom("flowCore", "read.flowSet")
 importFrom("xcms", "xcmsSet", "sampclass", "sampclass<-", "phenoData")
 export("isatab2bioc")
 export("isatab2bioczip")
