Changed package name to ISA2R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: Risatab
+Package: ISA2R
 Version: 1.0.7
 Date: 2012-mm-dd
 Title: Converting experimental metadata from ISA-tab into
@@ -12,7 +12,7 @@ Description: The Investigation / Study / Assay (ISA) tab-delimited
 	 complex metadata (i.e. sample characteristics, technologies used, type 
 	 of measurements made) from experiments employing a combination of 
 	 technologies, spanning from traditional approaches to high-throughput
-	 techniques. Risatab allows to access metadata/data in ISA-Tab format and 
+	 techniques. ISA2R allows to access metadata/data in ISA-Tab format and 
 	 build Bioconductor data structures. Currently, data generated from microarray, 
 	 flow cytometry and metabolomics-based (i.e. mass spectrometry) assays are supported. 
    The package is extendable and efforts are undergoing to support metadata associated to proteomics assays.
