Exporting the processAssayTypeMS function to the interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ importFrom("xcms", "xcmsSet")
 export("isatab2bioc")
 export("isatab2bioczip")
 export("processAssayType")
+export("processAssayTypeMS")
