Added function to add values to a column of a specific assay file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@ export("isatab2bioc")
 export("isatab2bioczip")
 export("processAssayType")
 export("processAssayXcmsSet")
+export("addAssayMetadata")
