Added functions to write investigation file and an assay file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,7 @@ export("isatab2bioc")
 export("isatab2bioczip")
 export("processAssayType")
 export("processAssayXcmsSet")
-export("addAssayMetadata")
+export("add.assay.metadata")
+export("write.isatab")
+export("write.investigation.file")
+export("write.assay.file")
