Fixed reading of files to be able to write augmented isatab dataset; the addAssayMetadata method now supports a single value (replicated across the column) or multiple values, whose number is validated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ export("isatab2bioc")
 export("isatab2bioczip")
 export("processAssayType")
 export("processAssayXcmsSet")
-export("add.assay.metadata")
+export("addAssayMetadata")
 export("write.isatab")
 export("write.investigation.file")
 export("write.assay.file")
