--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,9 @@
 importFrom("xcms", "xcmsSet")
 export("isatab2bioc")
 export("isatab2bioczip")
-export("processAssayType")
 export("processAssayXcmsSet")
 export("addAssayMetadata")
 export("write.isatab")
 export("write.investigation.file")
 export("write.assay.file")
+export("write.study.file")
