--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,11 @@ Version: 1.0.7
 Date: 2012-mm-dd
 Title: Converting experimental metadata from ISA-tab into
        Bioconductor data structures
-Author: Audrey Kauffmann 
-Maintainer: Audrey Kauffmann, Gabriella Rustici, Philippe Rocca-Serra <isatools@googlegroups.com>
-Depends: R (>= 2.0.9), Rcpp
+Author: Alejandra Gonzalez-Beltran, Audrey Kauffmann, Steffen Neumann, Gabriella Rustici, ISA Team
+Maintainer: Alejandra Gonzalez-Beltran, ISA Team <isatools@googlegroups.com>
+Depends: R (>= 2.0.9), Biobase (>= 2.4.0), Rcpp
 Imports: xcms
+Suggests: faahKO
 Description: The Investigation / Study / Assay (ISA) tab-delimited 
 	 format is a general purpose framework with which to collect and communicate 
 	 complex metadata (i.e. sample characteristics, technologies used, type 
@@ -17,5 +18,5 @@ Description: The Investigation / Study / Assay (ISA) tab-delimited
 	 flow cytometry and metabolomics-based (i.e. mass spectrometry) assays are supported. 
    The package is extendable and efforts are undergoing to support metadata associated to proteomics assays.
 License: Artistic-2.0
-biocViews: Annotation, DataImport, Microarray, OneChannel, TwoChannel, FlowCytometry
+biocViews: Annotation, DataImport, MassSpectrometry
 URL: <http://isatab.sourceforge.net/>
