--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,9 @@ Title: Converting experimental metadata from ISA-tab into
        Bioconductor data structures
 Author: Alejandra Gonzalez-Beltran, Audrey Kauffmann, Steffen Neumann, Gabriella Rustici, ISA Team
 Maintainer: Alejandra Gonzalez-Beltran, ISA Team <isatools@googlegroups.com>
-Depends: R (>= 2.0.9), Biobase (>= 2.4.0), Rcpp
+Depends: R (>= 2.0.9), Biobase (>= 2.4.0), Rcpp (>= 0.9.13)
 Imports: xcms
-Suggests: faahKO
+Suggests: faahKO (>= 1.2.11)
 Description: The Investigation / Study / Assay (ISA) tab-delimited 
 	 format is a general purpose framework with which to collect and communicate 
 	 complex metadata (i.e. sample characteristics, technologies used, type 
