Renamed function addAssayMetadata to updateAssayMetadata, minor changes in code and completed documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@ importFrom("xcms", "xcmsSet")
 export("isatab2bioc")
 export("isatab2bioczip")
 export("processAssayXcmsSet")
-export("addAssayMetadata")
+export("updateAssayMetadata")
 export("write.isatab")
 export("write.investigation.file")
 export("write.assay.file")
