--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,6 @@ Description: The Investigation / Study / Assay (ISA) tab-delimited
 	 build Bioconductor data structures. Currently, data generated from microarray, 
 	 flow cytometry and metabolomics-based (i.e. mass spectrometry) assays are supported. 
    The package is extendable and efforts are undergoing to support metadata associated to proteomics assays.
-License: GNU LGPL 3.0 
+License: LGPL
 biocViews: Annotation, DataImport, MassSpectrometry
 URL: <http://isatab.sourceforge.net/>
