Added class to NAMESPACE, updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export("write.isatab")
 export("write.investigation.file")
 export("write.assay.file")
 export("write.study.file")
+exportClass("ISAtab")
