Added function readISAtab and left isatab2bioc and isatab2bioczip as internal functions, modified all the documentation accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,5 @@
 importFrom("xcms", "xcmsSet")
-export("isatab2bioc")
-export("isatab2bioczip")
+export("readISAtab")
 export("processAssayXcmsSet")
 export("updateAssayMetadata")
 export("write.isatab")
