Modified method name from write.isatab to write.ISAtab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@ importFrom("xcms", "xcmsSet")
 export("readISAtab")
 export("processAssayXcmsSet")
 export("updateAssayMetadata")
-export("write.isatab")
+export("write.ISAtab")
 export("write.investigation.file")
 export("write.assay.file")
 export("write.study.file")
