Added factors as an slot in the ISAtab class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,11 @@
 importFrom("xcms", "xcmsSet")
 export("readISAtab")
 export("processAssayXcmsSet")
+export("processAssayXcmsSet.1factor")
 export("updateAssayMetadata")
 export("write.ISAtab")
 export("write.investigation.file")
 export("write.assay.file")
 export("write.study.file")
+export("suggestPackage")
 exportClass("ISAtab")
