Changed NEWS.Rd to NEWS, added NEWS for this version, added documentation, added isatab.syntax to the NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export("write.ISAtab")
 export("write.investigation.file")
 export("write.assay.file")
 export("write.study.file")
-export("suggestPackage")
+export("suggestBiocPackage")
 exportClass("ISAtab")
+export("isatab.syntax")
