Added getRawDataFiles method for mass spectrometry experiments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ importFrom("xcms", "xcmsSet")
 export("readISAtab")
 export("processAssayXcmsSet")
 export("processAssayXcmsSet.1factor")
+export("getRawDataFiles")
 export("updateAssayMetadata")
 export("write.ISAtab")
 export("write.investigation.file")
@@ -9,4 +10,3 @@ export("write.assay.file")
 export("write.study.file")
 export("suggestBiocPackage")
 exportClass("ISAtab")
-export("isatab.syntax")
