Added getAnnotatedDataFrameAssay, renamed is.ms to isMSAssay, added investigation.identifier to ISAtab-class, modified doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export("processAssayXcmsSet")
 export("processAssayXcmsSet.1factor")
 export("getRawDataFiles")
 export("getMSAssayFilenames")
-export("is.ms")
+export("isMSAssay")
 
 export("suggestBiocPackage")
 
