Added methods for microarray assays and NEWS file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,9 @@ export("getRawDataFiles")
 export("getMSAssayFilenames")
 export("isMSAssay")
 
+export("getMicroarrayAssayFilenames")
+export("isMicroarrayAssay")
+export("getMIAMEMetadata")
+
 export("suggestBiocPackage")
 
