Changed documentation, completed method setAssayTabs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("write.investigation.file")
 export("write.assay.file")
 export("write.study.file")
 export("getAnnotatedDataFrameAssay")
+export("getStudyFilename")
 
 export("getAssayRawDataFilenames")
 
