Added new documentation file and deleted old ones, changes in exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,11 +16,11 @@ export("getAssayRawDataFilenames")
 importFrom("xcms", "xcmsSet")
 export("processAssayXcmsSet")
 export("processAssayXcmsSet.1factor")
-export("getMSRawDataFilenames")
+#export("getMSRawDataFilenames")
 export("getMSAssayFilenames")
 export("isMSAssay")
 
-#export("getMicroarrayAssayFilenames")
+export("getMicroarrayAssayFilenames")
 export("isMicroarrayAssay")
 export("getMIAMEMetadata")
 
