Added doc for getExpressionSet, including example (with comments to download the cel files), example for getMIAMEMetadata, modified NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export("isMSAssay")
 export("getMicroarrayAssayFilenames")
 export("isMicroarrayAssay")
 export("getMIAMEMetadata")
+export("getExpressionSet")
 
 export("suggestBiocPackage")
 
