--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Author: Alejandra Gonzalez-Beltran, Audrey Kauffmann, Steffen Neumann, Gabriella
 Maintainer: Alejandra Gonzalez-Beltran <alejandra.gonzalez.beltran@gmail.com>
 Depends: R (>= 2.0.9), Biobase (>= 2.4.0), methods, Rcpp (>= 0.9.13), biocViews, affy
 Imports: xcms
-Suggests: faahKO (>= 1.2.11)
+Suggests: faahKO (>= 1.2.11),
+    testthat,
+    roxygen2
 Description: The Investigation / Study / Assay (ISA) tab-delimited 
 	 format is a general purpose framework with which to collect and communicate 
 	 complex metadata (i.e. sample characteristics, technologies used, type 
@@ -20,4 +22,3 @@ License: LGPL
 biocViews: Annotation, DataImport, MassSpectrometry
 URL: http://www.isa-tools.org/
 BugReports: https://github.com/ISA-tools/Risa/issues
-
